--- a/css/style.css
+++ b/css/style.css
@@ -57,15 +57,11 @@ button {
 .header .container {
     width: 90%;
 }
-.parent-header,.dropdown-menu,.btn1,.btn-header:hover,.team-social a:hover {
+.parent-header,.dropdown-menu,.btn1,.btn-header:hover,.content .btn2:hover,.team-social a:hover {
     background-color: #e8e8e8;
 }
 .line,.btn2,.btn-header,.nav-link::before,.content .btn1:hover,.first-content .line,.about-content .line,.price-box::after,.team-social a,.social,.indecator ul li {
     background-color: #15b9d9;
-}
-.btn2:hover{
-    background-color: #e8e8e8 !important;
-    color: #15b9d9 !important;
 }
 .parent-header {
     position: fixed;
@@ -393,7 +389,6 @@ button {
 /* Start Count Section */
 .count-section {
     height: 350px;
-    margin-top: 100px;
     background-image: url(../images/about/23.jpg);
     background-position: center;
 }
@@ -458,11 +453,10 @@ button {
 /* Start Fourth Section */
 .fourth-section {
     height: 400px;
-    margin-top: 150px;
     background-image: url(../images/about/9.jpg);
 }
 .fourth-parent {
-    margin-top: 100px;
+    margin-top: 150px;
     overflow: auto;
 }
 .fourth-img {
